# league_record_custom

./: .gitignore  dev-safe.ps1  dev_runner.ps1  package-lock.json  package.json  ranked_stats_dump.json  raw_input_example.py  readme.md  tsconfig.json
.github/workflows/: build_release.yml  build_release_v1.0.13_restored.yml.disabled  ci.yml  release.yml.disabled
league_record_types/: index.d.ts
src/: bindings.ts  index.html  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/riot_datatypes/src/: common.rs
src-tauri/riot_datatypes/src/lcu/: game.rs  session.rs
src-tauri/src/: commands.rs  generate_bindings.rs  main.rs
src-tauri/src/app/: event.rs  manager.rs  mod.rs  recordings.rs  system_tray.rs  window.rs
src-tauri/src/recorder/: data.rs  game_listener.rs  highlight_task.rs  league_recorder.rs  lp_helper.rs  metadata.rs  mod.rs  recording_task.rs  recording_task.rs.bak  window.rs
src-tauri/src/state/: mod.rs  raw_input.rs  settings.rs  shutdown.rs  tray_state.rs
src/css/: base.css  container.css  css_append_marker.txt  header.css  modal.css  scoreboard.css  settings.css  sidebar.css  titlebar.css  video.css
src/ts/: assets.ts  bindings.ts  datadragon.ts  i18n.ts  keybinds.ts  listeners.ts  main.ts  objectives.ts  queues.ts  timeline.ts  titlebar.ts  ui.ts  ui_methods_temp.ts  util.ts  version.ts
